{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 38,
  "lineage": "2cbcdc14-e5d2-d454-6e89-bc717c35caa3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0db46fd0284cc5ec2",
            "arn": "arn:aws:ec2:eu-west-3:854844097136:instance/i-0d4228e72eb902c37",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:854844097136:key/6cf9f517-35b3-4c07-a49d-3ea428b221b3",
                "tags": {
                  "Course": "TerraformAWS",
                  "Instance": "web-a",
                  "Name": "web-a-data-1",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "tags_all": {
                  "Course": "TerraformAWS",
                  "Instance": "web-a",
                  "Name": "web-a-data-1",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "throughput": 125,
                "volume_id": "vol-05bcf86a5c6a0c852",
                "volume_size": 8,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:854844097136:key/6cf9f517-35b3-4c07-a49d-3ea428b221b3",
                "tags": {
                  "Course": "TerraformAWS",
                  "Instance": "web-a",
                  "Name": "web-a-data-2",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "tags_all": {
                  "Course": "TerraformAWS",
                  "Instance": "web-a",
                  "Name": "web-a-data-2",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "throughput": 125,
                "volume_id": "vol-0e2d3ff712d12f738",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4228e72eb902c37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-011e5dda89e3f7fb6"
              }
            ],
            "primary_network_interface_id": "eni-011e5dda89e3f7fb6",
            "private_dns": "ip-10-10-1-201.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.201",
            "public_dns": "ec2-15-237-186-155.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.186.155",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:854844097136:key/6cf9f517-35b3-4c07-a49d-3ea428b221b3",
                "throughput": 125,
                "volume_id": "vol-06b868e4099d777a5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f917c7cf11930e78",
            "tags": {
              "AZ": "eu-west-3a",
              "Course": "TerraformAWS",
              "Name": "web-a",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "AZ": "eu-west-3a",
              "Course": "TerraformAWS",
              "Name": "web-a",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca399fad8a050801"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "i-0d4228e72eb902c37",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.subnet_a",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0db46fd0284cc5ec2",
            "arn": "arn:aws:ec2:eu-west-3:854844097136:instance/i-0d89e184ca8d2d002",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:854844097136:key/6cf9f517-35b3-4c07-a49d-3ea428b221b3",
                "tags": {
                  "Course": "TerraformAWS",
                  "Instance": "web-b",
                  "Name": "web-b-data-1",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "tags_all": {
                  "Course": "TerraformAWS",
                  "Instance": "web-b",
                  "Name": "web-b-data-1",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "throughput": 125,
                "volume_id": "vol-0446ffc2932742ddf",
                "volume_size": 8,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:854844097136:key/6cf9f517-35b3-4c07-a49d-3ea428b221b3",
                "tags": {
                  "Course": "TerraformAWS",
                  "Instance": "web-b",
                  "Name": "web-b-data-2",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "tags_all": {
                  "Course": "TerraformAWS",
                  "Instance": "web-b",
                  "Name": "web-b-data-2",
                  "Owner": "John Doe",
                  "Project": "atelier01"
                },
                "throughput": 125,
                "volume_id": "vol-0d0ecd0ce451db99d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d89e184ca8d2d002",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0115a3ee635772da9"
              }
            ],
            "primary_network_interface_id": "eni-0115a3ee635772da9",
            "private_dns": "ip-10-10-2-52.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.52",
            "public_dns": "ec2-13-38-115-89.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.115.89",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:854844097136:key/6cf9f517-35b3-4c07-a49d-3ea428b221b3",
                "throughput": 125,
                "volume_id": "vol-0ab670cc34effaf4e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04647392f47c73019",
            "tags": {
              "AZ": "eu-west-3b",
              "Course": "TerraformAWS",
              "Name": "web-b",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "AZ": "eu-west-3b",
              "Course": "TerraformAWS",
              "Name": "web-b",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca399fad8a050801"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "i-0d89e184ca8d2d002",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.subnet_b",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:854844097136:internet-gateway/igw-09fa0f111556c5d5a",
            "id": "igw-09fa0f111556c5d5a",
            "owner_id": "854844097136",
            "region": "eu-west-3",
            "tags": {
              "Course": "TerraformAWS",
              "Name": "atelier01-igw",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "Course": "TerraformAWS",
              "Name": "atelier01-igw",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "vpc_id": "vpc-086ea204328728d88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09fa0f111556c5d5a",
            "id": "r-rtb-065a2bdcd8fa1971a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-3",
            "route_table_id": "rtb-065a2bdcd8fa1971a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-3",
            "route_table_id": "rtb-065a2bdcd8fa1971a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:854844097136:route-table/rtb-065a2bdcd8fa1971a",
            "id": "rtb-065a2bdcd8fa1971a",
            "owner_id": "854844097136",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fa0f111556c5d5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Course": "TerraformAWS",
              "Name": "atelier01-rt-public",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "Course": "TerraformAWS",
              "Name": "atelier01-rt-public",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ea204328728d88"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "rtb-065a2bdcd8fa1971a",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c474c2e733d88b2e",
            "region": "eu-west-3",
            "route_table_id": "rtb-065a2bdcd8fa1971a",
            "subnet_id": "subnet-0f917c7cf11930e78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.subnet_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001429c5f63a97347",
            "region": "eu-west-3",
            "route_table_id": "rtb-065a2bdcd8fa1971a",
            "subnet_id": "subnet-04647392f47c73019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.subnet_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:854844097136:security-group/sg-0ca399fad8a050801",
            "description": "SG atelier: SSH + ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca399fad8a050801",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP (ping)",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "atelier01-sg",
            "name_prefix": "",
            "owner_id": "854844097136",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Course": "TerraformAWS",
              "Name": "atelier01-sg",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "Course": "TerraformAWS",
              "Name": "atelier01-sg",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ea204328728d88"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "sg-0ca399fad8a050801",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:854844097136:subnet/subnet-0f917c7cf11930e78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f917c7cf11930e78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854844097136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Course": "TerraformAWS",
              "Name": "atelier01-subnet-a",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "Course": "TerraformAWS",
              "Name": "atelier01-subnet-a",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "vpc_id": "vpc-086ea204328728d88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "subnet-0f917c7cf11930e78",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:854844097136:subnet/subnet-04647392f47c73019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04647392f47c73019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854844097136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Course": "TerraformAWS",
              "Name": "atelier01-subnet-b",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "Course": "TerraformAWS",
              "Name": "atelier01-subnet-b",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "vpc_id": "vpc-086ea204328728d88"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "subnet-04647392f47c73019",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:854844097136:vpc/vpc-086ea204328728d88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d5117e4e40fde7b6",
            "default_route_table_id": "rtb-020c0c86628adaf1e",
            "default_security_group_id": "sg-07d9ce173c7a1c4ed",
            "dhcp_options_id": "dopt-0f53d569c16bf91b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086ea204328728d88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020c0c86628adaf1e",
            "owner_id": "854844097136",
            "region": "eu-west-3",
            "tags": {
              "Course": "TerraformAWS",
              "Name": "vpc-atelier01",
              "Owner": "John Doe",
              "Project": "atelier01"
            },
            "tags_all": {
              "Course": "TerraformAWS",
              "Name": "vpc-atelier01",
              "Owner": "John Doe",
              "Project": "atelier01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "854844097136",
            "id": "vpc-086ea204328728d88",
            "region": "eu-west-3"
          }
        }
      ]
    }
  ]
}